@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
    - strategy:ShootStrategy
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + setShootStrategy(String strategy)
    + shoot():List<BaseBullet>
    + getStrategy():ShootStrategy
    + setStrategy():void
 }

abstract class AbstractEnemyAircraft
{
    + {abstract} shoot():List<BaseBullet>
    + {abstract} dropProp():List<BaseProp>
    + {abstract} getScore():int
}
AbstractAircraft <|-- AbstractEnemyAircraft

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:
    - {static} myaircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + {static} getHeroAircraft():HeroAircraft
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + dropProp():List<BaseProp>
    + getScore():int
}
AbstractEnemyAircraft <|-- MobEnemy

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + dropProp():List<BaseProp>
    + getScore():int
}

class ElitePlus{
    + ElitePlus(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + dropProp():List<BaseProp>
    + getScore():int
}

class Boss{
    + Boss(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + dropProp():List<BaseProp>
    + getScore():int
}

EliteEnemy ..>straightShoot
EliteEnemy -->AbstractAircraft
ElitePlus ..>arcShoot
ElitePlus -->AbstractAircraft
Boss ..>circleShoot
Boss -->AbstractAircraft

AbstractEnemyAircraft <|-- EliteEnemy
AbstractEnemyAircraft <|-- ElitePlus
AbstractEnemyAircraft <|--Boss


interface EnemyAircraftCreator{
    + Create():AbstractEnemyAircraft
}

class MobAircraftCreator{
    + Create():AbstractEnemyAircraft
}
EnemyAircraftCreator <|.. MobAircraftCreator

class EliteAircraftCreator{
    + Create():AbstractEnemyAircraft
}
EnemyAircraftCreator <|.. EliteAircraftCreator

MobAircraftCreator ..> MobEnemy
EliteAircraftCreator ..> EliteEnemy




abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class BaseProp
{
    + BaseProp(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
}

class BloodProp
{
    - Blood:int
    + BloodProp(int locationX, int locationY,int speedX, int speedY)
    + AddBlood():int
}
class BombProp
{
    - power:int
    + BombProp(int locationX, int locationY,int speedX, int speedY)
    + Bomb():int
}

BaseProp <|-- BloodProp
BaseProp <|-- BombProp

interface ShootStrategy
{
    + ShootAction():List<BaseBullet>
}

class straightShoot
{
    + ShootAction():List<BaseBullet>
}

class arcShoot
{
    + ShootAction():List<BaseBullet>
}

class circleShoot
{
    + ShootAction():List<BaseBullet>
}

straightShoot ..|>ShootStrategy
arcShoot ..|> ShootStrategy
circleShoot ..|> ShootStrategy
AbstractAircraft o--> ShootStrategy

class ArcBulletProp
{
    + ArcBulletProp(int locationX, int locationY,int speedX, int speedY)
    + valid():void
}

ArcBulletProp --> AbstractAircraft
ArcBulletProp ..> arcShoot

class CircleBulletProp
{
    + CircleBulletProp(int locationX, int locationY,int speedX, int speedY)
    + valid():void
}

CircleBulletProp --> AbstractAircraft
CircleBulletProp ..> circleShoot



interface PropCreator
{
    + Create():BaseProp
}
class BloodPropCreator
{
    +Create():BaseProp
}
class BombPropCreator
{
    +Create():BaseProp
}
class BulletPropCreator
{
    +Create():BaseProp
}
PropCreator <|.. BloodPropCreator
PropCreator <|.. BombPropCreator
PropCreator <|.. BulletPropCreator

BloodPropCreator ..> BloodProp
BombPropCreator ..> BombProp
BulletPropCreator ..> BulletProp



AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp





class Record {
    - rank: int
    - name: String
    - mark: int
    - time: LocalDateTime

    + Record(int rank,String name,int mark,LocalDateTime time)
    + getRank(): int
    + setRank(int): void
    + getName(): String
    + setName(String): void
    + getMark(): int
    + setMark(int): void
    + getTime(): LocalDateTime
    + setTime(LocalDateTime): void
}

interface RecordDao {
    + getAllRecord(): List<Record>
    + doAdd(Record): void
}

class RecordDaoImpl {
    - records: List<Record>
    + RecordDaoImpl()
    + getAllRecord(): List<Record>
    + doAdd(Record): void
}

RecordDaoImpl ..|>RecordDao
RecordDaoImpl -->Record






@enduml